# usc-umn-inferlink-ta1

./: .gitignore  README.md
integration/: README.md  all.sh  config.yml  luigi.cfg  luigi_logging.conf  main.py  mipper.py  pyproject.toml  tasker.py
integration/1_map_segment/: Dockerfile
integration/3_legend_item_segment/: Dockerfile
integration/4_legend_item_description/: Dockerfile
integration/6_text_spotting/: Dockerfile
integration/8_polygon_extract/: Dockerfile
integration/docker-tools/: base.txt  build.sh  dockerfile-include.py  modules.sh  perms.txt  set_perms.sh
integration/dockers/10_georeference/: Dockerfile  build_docker.sh
integration/dockers/2_legend_segment/: Dockerfile
integration/dockers/3_legend_item_segment/: Dockerfile  runme.sh
integration/dockers/5_map_crop/: Dockerfile
integration/dockers/6_text_spotting/: Dockerfile  build_docker.sh  runme.sh
integration/dockers/7_line_extract/: Dockerfile
integration/dockers/8_polygon_extract/: Dockerfile  (+1 more)
integration/docs/: docker_best_practices.docx  module_best_practices.docx  overview.pptx  python_best_practices.docx  top_ten_best_practices.docx
integration/gpu/: Dockerfile  install.sh
integration/task_graph/: all.sh  config.yaml  docker_runner.py  docker_task.py  end_task.py  legend_item_description_task_4.py  legend_item_segment_task_3.py  legend_segment_task_2.py  line_extract_task_7.py  logging.conf  main.py  map_crop_task_5.py  map_segment_task_1.py  polygon_extract_task_8.py  registry.py  resolver.py  simple_task.py  start_task_0.py  ta1_tasks.py  text_spotting_task_6.py
(+317 files in other folders)
